@@ -7,7 +7,11 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+
+import android.util.Log;
 
 import com.google.gson.Gson;
 
@@ -32,21 +36,42 @@ public class SaferBus {
 		return performQuery(url);
 	}
 	
+	public static SaferBusResponse getCarrierByDOT(String DOTnumber) {
+		String url = "FMCSA_URL" + "/carrier/" + DOTnumber + ".json?webKey=" + WEB_KEY;
+		return performQuery(url);
+	}
+	
 	private static SaferBusResponse performQuery(String connectionString) {
 		HttpURLConnection connection = null;
 		SaferBusResponse res = null;
 		BufferedReader br = null;
 		try {
-			URL url = new URL(connectionString);
+			URI uri = new URI(null,connectionString,null);
+			String uriString = uri.toASCIIString();
+			uriString = uriString.replace("&amp;", "%26");
+			URL url = new URL(uriString);
 			connection = (HttpURLConnection) url.openConnection();
 			InputStream is = new BufferedInputStream(connection.getInputStream());
 			br = new BufferedReader(new InputStreamReader(is));
 			res = (SaferBusResponse) gson.fromJson(br, SaferBusResponse.class);
 			br.close();
 		} catch (MalformedURLException mue) {
-			
+			mue.printStackTrace();
+		} catch (URISyntaxException use) {
+			use.printStackTrace();
 		} catch (IOException ioe) {
-			
+			ioe.printStackTrace();
+			InputStream is = new BufferedInputStream(connection.getErrorStream());
+			br = new BufferedReader(new InputStreamReader(is));
+			String line = null;
+			try {
+				while ((line = br.readLine()) != null) {
+					Log.i("IO",line);
+				}
+			} catch (IOException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
 		} finally {
 			if(connection != null) {
 				connection.disconnect();
